account for main-nav in fixed width .containers, prevents horizontal scroll

--- a/src/less/grid.less
+++ b/src/less/grid.less
@@ -46,6 +46,12 @@
   }
 }
 
+@media (min-width: @screen-xl-min) {
+  .container {
+    width: @container-xl;
+  }
+}
+
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
