--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -28,7 +28,8 @@
 @screen-xs-max: (@screen-sm-min - 1);
 @screen-sm-max: (@screen-md-min - 1);
 @screen-md-max: (@screen-lg-min - 1);
-@screen-lg-max: 1200px;
+@screen-lg-max: (@screen-xl-min - 1);
+@screen-xl-max: 1800px;
 //== Grid system
 //
 //## Define your custom responsive grid.
@@ -58,6 +59,10 @@
 // Large screen / wide desktop
 //** For `@screen-lg-min` and up.
 @container-lg:                 1180px;
+
+// Very wide screen / wide desktop
+//** For `@screen-xl-min` and up.
+@container-xl:                 1600px;
 
 
 // Scaffolding
